syntax = "proto3";

package zitadel.user.v2;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/user/v2;user";

import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

enum PasskeyAuthenticator {
  PASSKEY_AUTHENTICATOR_UNSPECIFIED = 0;
  PASSKEY_AUTHENTICATOR_PLATFORM = 1;
  PASSKEY_AUTHENTICATOR_CROSS_PLATFORM = 2;
}

message SendPasskeyRegistrationLink {
  // Optionally set a url_template, which will be used in the mail sent by ZITADEL to guide the user to your passkey registration page.
  // If no template is set, the default ZITADEL url will be used.
  //
  // The following placeholders can be used: UserID, OrgID, CodeID, Code
  optional string url_template = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1;
      max_length: 200;
      example: "\"https://example.com/passkey/register?userID={{.UserID}}&orgID={{.OrgID}}&codeID={{.CodeID}}&code={{.Code}}\"";
    }
  ];
}

message ReturnPasskeyRegistrationCode {}

message PasskeyRegistrationCode {
  string id = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"id to the one time code generated by ZITADEL\"";
      example: "\"e2a48d6a-362b-4db6-a1fb-34feab84dc62\"";
      max_length: 200;
    }
  ];
  string code = 2 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "\"one time code generated by ZITADEL\"";
      example: "\"SomeSpecialCode\"";
      max_length: 200;
    }
  ];
}
